@@ -24,7 +24,18 @@ QXmpp 0.3.0 (Unreleased)
     * QXmppVCard class name changed to QXmppVCardIq
     * Signal QXmppClient::discoveryIqReceived in favour of 
       QXmppDiscoveryManager::infoReceived and QXmppDiscoveryManager::itemsReceived
-    
+  
+  - Removal
+    Extensions QXmppArchiveManager, QXmppMucManager, QXmppCallManager, QXmppTransferManager
+    will not load by default. Therefore following functions to provide the reference 
+    have been removed.
+    QXmppClient::transferManager()
+    QXmppClient::archiveManager()
+    QXmppClient::callManager()
+    QXmppClient::mucManager()
+    Note: Once should use QXmppClient::addExtension() and QXmppClient::findExtension()
+          to load or enable these extensions.
+  
   - Add support for DNS SRV lookups, meaning you can connect to nearly all
     servers using only a JID and a password.
   - Improve support for SASL authentication, with a verification of the second
